2005-03-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageType): Bilevel image is not required to
	be PseudoClass type.
	* coders/mpc.c (WriteMPCImage): Persist is_monochrome and
	is_grayscale flags.
	(ReadMPCImage): Restore is_monochrome and is_grayscale flags.
	* magick/constitute.c (WriteImage): Extended logging to include
	monochrome and grayscale flags.
	(ReadImage): Extended logging to include monochrome and grayscale
	flags.
	* magick/image.c (DescribeImage): Include the effective pixel I/O
	rate alongside the image read/write time.  This provides an easier
	way to evaluate image read/write performance when looking at
	'identify' or 'convert -verbose' output.
	* coders/sun.c (ReadSUNImage): Ensure that pixel length value does
	not overflow for large images.

2005-03-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/cache.c (SetImagePixels): Improved documentation.
	(GetImagePixels): Improved documentation.

2005-13-10 Glenn Randers-Pehrson <glennrp@glennrp.com>

	* coders/png.c: Avoid attempting to write indexed PNG when
	a color entry has more than one opacity level.  The PNG format
	supports this but GM's colormap does not, so erroneous files
	were being written.

2005-03-09  Arne Rusek  <zonk@matfyz.cz>

	* magick/attribute.c (GenerateEXIFAttribute): Offset type
	correction to fix loop termination if size_t type is not 'long'.

2005-03-09  Alexander Yaworsky  <yaworsky@users.sourceforge.net>

	* coders/jbig.c (WriteJBIGImage): JBIG was writing an empty output
	file. Apparently libjbig parameters have changed. Setting l0
	parameter of jbg_enc_options to zero instead of -1 (like in
	jbigkit's pbmtools) solved the problem.

2005-03-07  Mike Chiarappa  <mikechiarappa@libero.it>

	* BCBMagick\magick\GM_magick.bpr: Updated to reflect changes since last update.
	* BCBMagick\magick\libMagick.bpr: Updated to reflect changes since last update.

2005-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
